LanguageTool Change Log

2.6-SNAPSHOT (release planned for 2014-06-30)

-Breton:
    -updated FSA spelling dictionary from An Drouizig Breton Spellchecker 0.12
    -updated POS dictionary from Apertium (svn r53329)
    -improved several rules
    
-English:
    -The spelling rule now accepts words with hyphens if the parts are valid words.
     For example, "web-based" is accepted now. This avoids a lot of false alarms.
    -Fixed a thread-safety problem in the synthesizer

-Esperanto:
    -added several rules

-French:
    -updated POS tag dictionary and Hunspell dictionary to Dicollecte-5.1
    -added/improved several rules

-German:
    -fixed false alarm for words like "Stil-" in phrases like "Stil- und 
     Grammatikprüfung" (issue #93)
    -detect wrong uppercase spelling in sentences like "Die Blaue Tür"

-Japanese:
    -added some rules, thanks to github user Shugyousha
    
-Polish:
    -added/improved many rules
    -improved disambiguation
    -improved spell-checking of foreign words with apostrophes
    
-Portuguese:
    -added/improved several rules
    -a total of 3534 compound words
    
-Russian:
    - added big wordlist to spellcheck dictionary. Thanks for wordlist to Dmitri Gabinski
    - fixed wrong tag in tagger dictionary:  ADJ_Comp --> ADJ_Sup,  ADJ_S --> ADJ_Com
    - added/improved several rules
       
    
-Asturian, Italian, Lithuanian, Malayalam, Swedish, and Tagalog have been switched
 to an SRX-based sentence tokenizer implementation. 

-Wikipedia:
    -The deprecated options check-dump and wiki-index have been removed
     from org.languagetool.dev.wikipedia.Main. Please use check-data
     and index-data instead.

-API:
    -Almost all deprecated methods and classes have been removed. If you're upgrading 
     from a version earlier than 2.5, we recommend to upgrade to 2.5 first, fix all
     deprecation warnings, and then upgrade to 2.6.
    -If you extend the 'Language' class and don't implement the getSentenceTokenizer()