@@ -46,9 +46,9 @@ public final class MorfologikCatalanSpellerRule extends MorfologikSpellerRule {
   }
   
   @Override
-  // We don't use Hunspell dictionary for spelling but the same dictionary used in tagging
-  public boolean isDictionaryBasedSpellingRule() {
-    return false;
+  // Use this rule in LO/OO extension despite being a spelling rule
+  public boolean useInOffice() {
+    return true;
   }
 
 }
